--- a/CONTRIBUTING.html
+++ b/CONTRIBUTING.html
@@ -265,7 +265,7 @@ div.tocify {
 </div>
 <div id="enforcement" class="section level3">
 <h3>Enforcement</h3>
-<p>Instances of abusive, harassing, or otherwise unacceptable behavior may be reported by contacting the project team at [<a href="mailto:remi.daigle@dal.ca">remi.daigle@dal.ca</a>]. All complaints will be reviewed and investigated and will result in a response that is deemed necessary and appropriate to the circumstances. The project team is obligated to maintain confidentiality with regard to the reporter of an incident. Further details of specific enforcement policies may be posted separately.</p>
+<p>Instances of abusive, harassing, or otherwise unacceptable behavior may be reported by contacting the project team via <a href="mailto:remi.daigle@dal.ca?subject=Marxan%20with%20Connectivity%20enforcement%20issue">email</a>. All complaints will be reviewed and investigated and will result in a response that is deemed necessary and appropriate to the circumstances. The project team is obligated to maintain confidentiality with regard to the reporter of an incident. Further details of specific enforcement policies may be posted separately.</p>
 <p>Project maintainers who do not follow or enforce the Code of Conduct in good faith may face temporary or permanent repercussions as determined by other members of the project’s leadership.</p>
 </div>
 <div id="attribution" class="section level3">
