tweak license link

--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@ pip install os</code></pre>
 </div>
 <div id="license" class="section level2">
 <h2>License</h2>
-<p>This project is licensed under the MIT License - see the <a href="https://remi-daigle.github.io/MarxanConnect/LICENSE">LICENSE.md</a> file for details</p>
+<p>This project is licensed under the MIT License - see the <a href="https://github.com/remi-daigle/MarxanConnect/blob/master/LICENSE">LICENSE.md</a> file for details</p>
 </div>
 <div id="acknowledgments" class="section level2">
 <h2>Acknowledgments</h2>
