--- a/glossary.html
+++ b/glossary.html
@@ -282,36 +282,49 @@ div.tocify {
 <th align="center">2</th>
 <th align="center">3</th>
 <th align="center">4</th>
+<th align="center">…</th>
 </tr>
 </thead>
 <tbody>
 <tr class="odd">
-<td align="center">1</td>
+<td align="center"><strong>1</strong></td>
 <td align="center">0.1</td>
 <td align="center">0.02</td>
 <td align="center">0.005</td>
 <td align="center">0.01</td>
+<td align="center">…</td>
 </tr>
 <tr class="even">
-<td align="center">2</td>
+<td align="center"><strong>2</strong></td>
 <td align="center">0.006</td>
 <td align="center">0.2</td>
 <td align="center">0.007</td>
 <td align="center">0.009</td>
+<td align="center">…</td>
 </tr>
 <tr class="odd">
-<td align="center">3</td>
+<td align="center"><strong>3</strong></td>
 <td align="center">0.01</td>
 <td align="center">0.003</td>
 <td align="center">0.25</td>
 <td align="center">0.02</td>
+<td align="center">…</td>
 </tr>
 <tr class="even">
-<td align="center">4</td>
+<td align="center"><strong>4</strong></td>
 <td align="center">0.022</td>
 <td align="center">0.017</td>
 <td align="center">0.001</td>
 <td align="center">0.2</td>
+<td align="center">…</td>
+</tr>
+<tr class="odd">
+<td align="center">…</td>
+<td align="center">…</td>
+<td align="center">…</td>
+<td align="center">…</td>
+<td align="center">…</td>
+<td align="center">…</td>
 </tr>
 </tbody>
 </table>
@@ -346,6 +359,11 @@ div.tocify {
 <td align="center">1</td>
 <td align="center">4</td>
 <td align="center">0.01</td>
+</tr>
+<tr class="odd">
+<td align="center">…</td>
+<td align="center">…</td>
+<td align="center">…</td>
 </tr>
 </tbody>
 </table>
@@ -386,13 +404,19 @@ div.tocify {
 <td align="center">4</td>
 <td align="center">0.01</td>
 </tr>
+<tr class="odd">
+<td align="center">…</td>
+<td align="center">…</td>
+<td align="center">…</td>
+<td align="center">…</td>
+</tr>
 </tbody>
 </table>
 </div>
 </div>
 </div>
-<div id="conservation-targets" class="section level1">
-<h1><span class="header-section-number">3</span> Conservation Targets</h1>
+<div id="conservation-feature" class="section level1">
+<h1><span class="header-section-number">3</span> Conservation Feature</h1>
 <p>description</p>
 <div id="vertex-degree" class="section level2">
 <h2><span class="header-section-number">3.1</span> Vertex Degree</h2>
