--- a/index.html
+++ b/index.html
@@ -230,14 +230,14 @@ div.tocify {
 <p>(<strong>WARNING! Marxan with Connectivity is ‘pre-alpha’ and is not yet fully operational, download at your own risk</strong>)</p>
 <p>Please download the latest <a href="https://github.com/remi-daigle/MarxanConnect/releases">MarxanConnectSetupWindows.exe</a> installer file, run it, and follow the instructions. Alternatively (for advanced users only), follow the <a href="https://remi-daigle.github.io/MarxanConnect/#building-from-source">Building from source</a> instructions to use the latest bleeding edge version of the app.</p>
 </div>
-<div id="mac-and-linux-installers" class="section level3">
-<h3>Mac and Linux Installers:</h3>
-<p>(in progress)</p>
+<div id="windows-zipped-bundle" class="section level3">
+<h3>Windows Zipped Bundle</h3>
+<p>If you cannot use the installer because you do not have administrative priviledges, we’ve provided a zipped bundle of the app to allow users to bypass that problem. To use, download the latest <a href="https://github.com/remi-daigle/MarxanConnect/releases">MarxanConnectWindows.zip</a>, unzip it to your preferred destination (e.g. <code>~/Desktop</code>), and double-click <code>MarxanConnectGUI.exe</code>. In this case you will have to generate any start menu shorcuts, or file associations (i.e. <code>.MarCon</code>) manually.</p>
 </div>
 </div>
 <div id="building-from-source" class="section level2">
 <h2>Building from source</h2>
-<p>Building from source is only necessary if you plan to contribute to the project (see <a href="https://remi-daigle.github.io/MarxanConnect/#contributing">Contributing</a> section below) or if you want to use the bleeding edge version of the app</p>
+<p>Building from source is only necessary if you plan to contribute to the project (see <a href="https://remi-daigle.github.io/MarxanConnect/#contributing">Contributing</a> section below) or if you want to use the bleeding edge version of the app.</p>
 <p>Building this repository has only been tested on Python 3.5.2 64-bit on a machine running Windows 10, your mileage may vary! (<em>Please note, I could not build the repository using Anaconda</em>).</p>
 <ul>
 <li>Download this repository</li>
@@ -250,8 +250,7 @@ div.tocify {
 <ul>
 <li><a href="https://www.python.org/downloads/release/python-352/">Python 3.5.2 64-bit</a></li>
 <li><a href="https://github.com/wxFormBuilder/wxFormBuilder">wxFormBuilder</a></li>
-<li><a href="http://nsis.sourceforge.net/Main_Page">NSIS</a></li>
-<li><a href="http://nsis.sourceforge.net/NSIS_Quick_Setup_Script_Generator">NSIS Quick Setup Script Generator</a></li>
+<li><a href="http://www.jrsoftware.org/isinfo.php">Inno Setup</a></li>
 </ul>
 <p>It also assumes you have all the pre-requisite python modules installed, i.e.:</p>
 <pre><code>#!/bin/bash
@@ -265,19 +264,17 @@ pip install python-igraph
 pip install networkx
 
 # for compiling executable
-pip install cx_Freeze
-pip install sys
-pip install os</code></pre>
+pip install cx_Freeze</code></pre>
 </div>
 </div>
 <div id="built-with" class="section level2">
 <h2>Built With</h2>
 <p>The <code>gui.py</code> file was built using the fantastic <a href="https://github.com/wxFormBuilder/wxFormBuilder">wxFormBuilder</a>.</p>
-<p>The windows installer was built using <a href="http://nsis.sourceforge.net/Main_Page">NSIS</a> and the <a href="http://nsis.sourceforge.net/NSIS_Quick_Setup_Script_Generator">NSIS Quick Setup Script Generator</a></p>
+<p>The windows installer was built using <a href="http://www.jrsoftware.org/isinfo.php">Inno Setup</a>.</p>
 </div>
 <div id="contributing" class="section level2">
 <h2>Contributing</h2>
-<p>Please read <a href="https://remi-daigle.github.io/MarxanConnect/CONTRIBUTING">CONTRIBUTING.md</a> for details on our code of conduct, and the process for submitting pull requests to us.</p>
+<p>Please read <a href="https://remi-daigle.github.io/MarxanConnect/CONTRIBUTING">CONTRIBUTING.md</a> for details on our code of conduct, and the process for submitting pull requests or issues to us.</p>
 </div>
 <div id="versioning" class="section level2">
 <h2>Versioning</h2>
@@ -287,7 +284,7 @@ pip install os</code></pre>
 <h2>Authors</h2>
 <ul>
 <li><strong>Remi Daigle</strong> - <em>Initial work, development, maintenance</em> - <a href="https://github.com/remi-daigle">remi-daigle</a></li>
-<li><strong>Arieanna Balbar</strong> - <em>Consultation, Mac installer development</em></li>
+<li><strong>Arieanna Balbar</strong> - <em>Consultation</em></li>
 <li><strong>Anna Metaxas</strong> - <em>Consultation</em></li>
 <li><strong>Maria Beger</strong> - <em>Consultation</em></li>
 </ul>
