--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@ div.tocify {
 </div>
 <div id="windows-zipped-bundle" class="section level3">
 <h3>Windows Zipped Bundle</h3>
-<p>If you cannot use the installer because you do not have administrative priviledges, we’ve provided a zipped bundle of the app to allow users to bypass that problem. To use, download the latest <a href="https://github.com/remi-daigle/MarxanConnect/releases">MarxanConnectWindows.zip</a>, unzip it to your preferred destination (e.g. <code>~/Desktop</code>), and double-click <code>MarxanConnectGUI.exe</code>. In this case you will have to generate any start menu shorcuts, or file associations (i.e. <code>.MarCon</code>) manually.</p>
+<p>If you cannot use the installer because you do not have administrative privileges, we’ve provided a zipped bundle of the app to allow users to bypass that problem. To use, download the latest <a href="https://github.com/remi-daigle/MarxanConnect/releases">MarxanConnectWindows.zip</a>, unzip it to your preferred destination (e.g. <code>~/Desktop</code>), and double-click <code>MarxanConnectGUI.exe</code>. In this case you will have to generate any start menu shortcuts, or file associations (i.e. <code>.MarCon</code>) manually.</p>
 </div>
 </div>
 <div id="building-from-source" class="section level2">
@@ -297,7 +297,7 @@ pip install cx_Freeze</code></pre>
 <div id="acknowledgments" class="section level2">
 <h2>Acknowledgments</h2>
 <ul>
-<li>Funding for the development of this sotware was provided Canadian Healthy Oceans Network <a href="https://chone2.ca/">(CHONe)</a> a Natural Sciences and Engineering Research Council of Canada <a href="http://www.nserc-crsng.gc.ca/index_eng.asp">(NSERC)</a> Strategic Network.</li>
+<li>Funding for the development of this software was provided Canadian Healthy Oceans Network <a href="https://chone2.ca/">(CHONe)</a> a Natural Sciences and Engineering Research Council of Canada <a href="http://www.nserc-crsng.gc.ca/index_eng.asp">(NSERC)</a> Strategic Network.</li>
 <li>This project builds on the existing <a href="http://marxan.net/">Marxan</a> (Ball et al. 2009) software and would not be possible without the hard work of Ian Ball, Hugh Possingham, and Matt Watts.</li>
 </ul>
 </div>
