first alpha release

--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@ div.tocify {
 <h2>Installing</h2>
 <div id="windows-installer" class="section level3">
 <h3>Windows Installer:</h3>
-<p>(<strong>WARNING! Marxan with Connectivity is ‘pre-alpha’ and is not yet fully operational, download at your own risk</strong>)</p>
+<p>(<strong>WARNING! Marxan with Connectivity is in ‘alpha’ release and is not yet fully operational, download at your own risk</strong>)</p>
 <p>Please download the latest <a href="https://github.com/remi-daigle/MarxanConnect/releases">MarxanConnectSetupWindows.exe</a> installer file, run it, and follow the instructions. Alternatively (for advanced users only), follow the <a href="https://remi-daigle.github.io/MarxanConnect/#building-from-source">Building from source</a> instructions to use the latest bleeding edge version of the app.</p>
 </div>
 <div id="windows-zipped-bundle" class="section level3">
