include index.html

--- a/index.html
+++ b/index.html
@@ -284,10 +284,16 @@ pip install cx_Freeze</code></pre>
 <h2>Authors</h2>
 <ul>
 <li><strong>Remi Daigle</strong> - <em>Initial work, development, maintenance</em> - <a href="https://github.com/remi-daigle">remi-daigle</a></li>
-<li><strong>Arieanna Balbar</strong> - <em>Consultation</em></li>
-<li><strong>Anna Metaxas</strong> - <em>Consultation</em></li>
+<li><strong>Arieanna Balbar</strong> - <em>Consultation</em> - <a href="https://github.com/abalbar">abalbar</a></li>
 <li><strong>Maria Beger</strong> - <em>Consultation</em></li>
+<li><strong>Jo Clarke</strong> - <em>Consultation</em></li>
+<li><strong>Caitie Kuempel</strong> - <em>Consultation</em></li>
+<li><strong>Jennifer McGowan</strong> - <em>Consultation</em></li>
+<li><strong>Anna Metaxas</strong> - <em>Consultation</em></li>
+<li><strong>Hugh Possingham</strong> - <em>Consultation</em></li>
+<li><strong>Eric Anton Treml</strong> - <em>Consultation</em></li>
 </ul>
+<p>(alphabetical aside from first author)</p>
 <p>See also the list of <a href="https://github.com/remi-daigle/MarxanConnect/contributors">contributors</a> who participated in this project.</p>
 </div>
 <div id="license" class="section level2">
