added caitie's github account

--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@ pip install cx_Freeze</code></pre>
 <li><strong>Arieanna Balbar</strong> - <em>Consultation</em> - <a href="https://github.com/abalbar">abalbar</a></li>
 <li><strong>Maria Beger</strong> - <em>Consultation</em></li>
 <li><strong>Jo Clarke</strong> - <em>Consultation</em></li>
-<li><strong>Caitie Kuempel</strong> - <em>Consultation</em></li>
+<li><strong>Caitie Kuempel</strong> - <em>Consultation</em> - <a href="https://github.com/cdkuempel">cdkuempel</a></li>
 <li><strong>Jennifer McGowan</strong> - <em>Consultation</em></li>
 <li><strong>Anna Metaxas</strong> - <em>Consultation</em></li>
 <li><strong>Hugh Possingham</strong> - <em>Consultation</em></li>
