--- a/CONTRIBUTING.html
+++ b/CONTRIBUTING.html
@@ -26,6 +26,11 @@
 <link href="site_libs/highlightjs-1.1/default.css" rel="stylesheet" />
 <script src="site_libs/highlightjs-1.1/highlight.js"></script>
 <link href="site_libs/font-awesome-4.5.0/css/font-awesome.min.css" rel="stylesheet" />
+<div id="header">
+    <center>
+        <p></p>
+    </center>
+</div>
 
 <style type="text/css">code{white-space: pre;}</style>
 <style type="text/css">
@@ -328,8 +333,8 @@ div.tocify {
 
 <p>When contributing to this repository, please first discuss the change you wish to make via issue, email, or any other method with the owners of this repository before making a change.</p>
 <p>Please note we have a code of conduct, please follow it in all your interactions with the project.</p>
-<div id="pull-request-process" class="section level2">
-<h2>Pull Request Process</h2>
+<div id="pull-request-process" class="section level1">
+<h1>Pull Request Process</h1>
 <ol style="list-style-type: decimal">
 <li>Ensure any install or build dependencies are removed before the end of the layer when doing a build.</li>
 <li>Update the README.md with details of changes to the interface, this includes new environment variables, exposed ports, useful file locations and container parameters.</li>
@@ -337,14 +342,14 @@ div.tocify {
 <li>You may merge the Pull Request in once you have the sign-off of two other developers, or if you do not have permission to do that, you may request the second reviewer to merge it for you.</li>
 </ol>
 </div>
-<div id="code-of-conduct" class="section level2">
-<h2>Code of Conduct</h2>
-<div id="our-pledge" class="section level3">
-<h3>Our Pledge</h3>
+<div id="code-of-conduct" class="section level1">
+<h1>Code of Conduct</h1>
+<div id="our-pledge" class="section level2">
+<h2>Our Pledge</h2>
 <p>In the interest of fostering an open and welcoming environment, we as contributors and maintainers pledge to making participation in our project and our community a harassment-free experience for everyone, regardless of age, body size, disability, ethnicity, gender identity and expression, level of experience, nationality, personal appearance, race, religion, or sexual identity and orientation.</p>
 </div>
-<div id="our-standards" class="section level3">
-<h3>Our Standards</h3>
+<div id="our-standards" class="section level2">
+<h2>Our Standards</h2>
 <p>Examples of behavior that contributes to creating a positive environment include:</p>
 <ul>
 <li>Using welcoming and inclusive language</li>
@@ -362,22 +367,22 @@ div.tocify {
 <li>Other conduct which could reasonably be considered inappropriate in a professional setting</li>
 </ul>
 </div>
-<div id="our-responsibilities" class="section level3">
-<h3>Our Responsibilities</h3>
+<div id="our-responsibilities" class="section level2">
+<h2>Our Responsibilities</h2>
 <p>Project maintainers are responsible for clarifying the standards of acceptable behavior and are expected to take appropriate and fair corrective action in response to any instances of unacceptable behavior.</p>
 <p>Project maintainers have the right and responsibility to remove, edit, or reject comments, commits, code, wiki edits, issues, and other contributions that are not aligned to this Code of Conduct, or to ban temporarily or permanently any contributor for other behaviors that they deem inappropriate, threatening, offensive, or harmful.</p>
 </div>
-<div id="scope" class="section level3">
-<h3>Scope</h3>
+<div id="scope" class="section level2">
+<h2>Scope</h2>
 <p>This Code of Conduct applies both within project spaces and in public spaces when an individual is representing the project or its community. Examples of representing a project or community include using an official project e-mail address, posting via an official social media account, or acting as an appointed representative at an online or offline event. Representation of a project may be further defined and clarified by project maintainers.</p>
 </div>
-<div id="enforcement" class="section level3">
-<h3>Enforcement</h3>
+<div id="enforcement" class="section level2">
+<h2>Enforcement</h2>
 <p>Instances of abusive, harassing, or otherwise unacceptable behavior may be reported by contacting the project team via <a href="mailto:remi.daigle@dal.ca?subject=Marxan%20with%20Connectivity%20enforcement%20issue">email</a>. All complaints will be reviewed and investigated and will result in a response that is deemed necessary and appropriate to the circumstances. The project team is obligated to maintain confidentiality with regard to the reporter of an incident. Further details of specific enforcement policies may be posted separately.</p>
 <p>Project maintainers who do not follow or enforce the Code of Conduct in good faith may face temporary or permanent repercussions as determined by other members of the project’s leadership.</p>
 </div>
-<div id="attribution" class="section level3">
-<h3>Attribution</h3>
+<div id="attribution" class="section level2">
+<h2>Attribution</h2>
 <p>This Code of Conduct is adapted from the <a href="http://contributor-covenant.org">Contributor Covenant</a>, version 1.4, available at <a href="http://contributor-covenant.org/version/1/4/">http://contributor-covenant.org/version/1/4</a></p>
 </div>
 </div>
