allow euclidean distance and landscape choices

--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@ div.tocify {
 <div id="installing" class="section level1">
 <h1>Installing</h1>
 <div id="windows-installer" class="section level2">
-<h2>Windows Installer:</h2>
+<h2>Windows Installer</h2>
 <p>(<strong>WARNING! Marxan Connect is in ‘alpha’ release and is not yet fully operational, download at your own risk</strong>)</p>
 <p>Please download the latest <a href="https://github.com/remi-daigle/MarxanConnect/releases">MarxanConnect-vX-Y-Z-windows-setup.exe</a> installer file, run it, and follow the instructions. Alternatively (for advanced users only), follow the <a href="https://remi-daigle.github.io/MarxanConnect/#building-from-source">Building from source</a> instructions to use the latest bleeding edge version of the app.</p>
 </div>
@@ -351,7 +351,7 @@ div.tocify {
 <div id="building-from-source" class="section level1">
 <h1>Building from source</h1>
 <p>Building from source is only necessary if you plan to contribute to the project (see <a href="https://remi-daigle.github.io/MarxanConnect/#contributing">Contributing</a> section below) or if you want to use the bleeding edge version of the app.</p>
-<p>Building this repository has only been tested on Python 3.5.2 64-bit on a machine running Windows 10, your mileage may vary! (<em>Please note, I could not build the repository using Anaconda</em>).</p>
+<p>Building this repository has only been tested on Python 3.5.2 64-bit on a machine running Windows 10, your mileage may vary! (<em>Please note, I could not build the app using Anaconda</em>).</p>
 <ul>
 <li>Download this repository</li>
 <li>If necessary, edit the hard coded file paths in <a href="https://github.com/remi-daigle/MarxanConnect/blob/master/setup.py">setup.py</a> and <a href="https://github.com/remi-daigle/MarxanConnect/blob/master/WindowsSetupBuilder.iss">WindowsSetupBuilder.iss</a></li>
