--- a/CONTRIBUTING.html
+++ b/CONTRIBUTING.html
@@ -339,7 +339,8 @@ div.tocify {
 <div id="issue-posting-process" class="section level1">
 <h1>Issue Posting Process</h1>
 <ol style="list-style-type: decimal">
-<li>Use the <a href="https://github.com/remi-daigle/MarxanConnect/blob/master/ISSUE_TEMPLATE.md">Issue Template</a></li>
+<li>Check the <a href="https://github.com/remi-daigle/MarxanConnect/issues">Issues</a> before posting to avoid duplication.</li>
+<li>Use the <a href="https://github.com/remi-daigle/MarxanConnect/blob/master/ISSUE_TEMPLATE.md">Issue Template</a>.</li>
 </ol>
 </div>
 <div id="pull-request-process" class="section level1">
