split up COC and contributing pages

--- a/glossary.html
+++ b/glossary.html
@@ -311,6 +311,13 @@ div.tocify {
     Contributing
   </a>
 </li>
+<li>
+  <a href="CODE_OF_CONDUCT.html">
+    <span class="fa fa-balance-scale"></span>
+     
+    Code of Conduct
+  </a>
+</li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li>
